# wsi-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md  SUPPLY_CHAIN.md  architecture.md  build.rs  deny.toml  rust-toolchain.toml  typos.toml
.cargo/: config.toml
.github/workflows/: ci.yml  cuda-validation.yml  publish.yml  rc-preflight.yml  secret-scan.yml
api/: statumen-public-api-cuda.txt  statumen-public-api-metal.txt  statumen-public-api.txt  wsi-rs-public-api-cuda.txt  wsi-rs-public-api-metal.txt  wsi-rs-public-api.txt
benches/: decode_throughput.rs  openslide_parity.rs  read_paths.rs  wsi_pipeline.rs
docs/: architecture.md
examples/: bench_dicom_tile_batch.rs  extract_jpeg_tiles.rs  fw01_trace_pattern.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: open_dicom_bytes.rs  open_jp2k_codestream_bytes.rs  open_mirax_bundle_bytes.rs  open_svcache_bytes.rs  open_wsi_bytes.rs  open_zvi_bytes.rs  parse_xml_bytes.rs
fuzz/seeds/open_dicom_bytes/: preamble.txt
fuzz/seeds/open_jp2k_codestream_bytes/: minimal.txt
fuzz/seeds/open_mirax_bundle_bytes/: minimal.ini
fuzz/seeds/open_svcache_bytes/: minimal.txt
fuzz/seeds/open_wsi_bytes/: minimal.txt
fuzz/seeds/open_zvi_bytes/: cfb-signature.txt
fuzz/seeds/parse_xml_bytes/: minimal.xml
scripts/: check-semver.sh  compare_bench.py  iris_bench.py  parity-corpus-fetch.sh  publish-crate-test.sh  publish-crate.sh
src/: error.rs  lib.rs  properties.rs  test_support.rs
src/core/: batch.rs  cache.rs  decode_runtime.rs  file_identity.rs  hash.rs  limits.rs  mod.rs  read_control.rs  registry.rs  types.rs
src/core/decode_runtime/: tests.rs
src/core/registry/: composition.rs  mod.rs  open_options.rs  registry_impl.rs  slide.rs  tests.rs  traits.rs
src/core/types/: geometry.rs  mod.rs  model.rs  output.rs  pixels.rs  requests.rs  tests.rs
src/decode/: jp2k.rs  jp2k_backend.rs  jp2k_codestream.rs  jp2k_packet.rs  jp2k_raster.rs  jpeg.rs  mod.rs  xml.rs
src/decode/jp2k/: tests.rs
src/decode/jp2k_packet/: tests.rs
src/decode/jpeg/: device.rs  input.rs  tests.rs
src/formats/: companion_path.rs  dicom.rs  geometry.rs  hamamatsu_vms.rs  ini.rs  mirax.rs  mod.rs  olympus_vsi.rs  raw_jp2k.rs  svcache.rs  zeiss.rs  zeiss_zvi.rs
src/formats/dicom/: backend.rs  decode.rs  frame_index.rs  image.rs  manifest.rs  metadata.rs  mod.rs  reader.rs  tests.rs
src/formats/hamamatsu_vms/: ini.rs  jpeg.rs  levels.rs  model.rs  slide.rs  tests.rs
src/formats/mirax/: helpers.rs  index.rs  slide.rs  tests.rs
src/formats/svcache/: build.rs  paths.rs  reader.rs  storage.rs  tests.rs
src/formats/tiff_family/: container.rs  error.rs  icc.rs  mod.rs  pixel_access.rs  test_support.rs
src/formats/tiff_family/container/: access.rs  model.rs  ndpi_offsets.rs  parse.rs  tests.rs
src/formats/tiff_family/layout/: aperio.rs  generic.rs  leica.rs  mod.rs  ndpi.rs  philips.rs  trestle.rs  ventana.rs
src/formats/tiff_family/layout/ventana/: tests.rs
src/formats/tiff_family/pixel_access/: associated.rs  caches.rs  dct_reemit.rs  decode_batch.rs  dispatch.rs  image_ops.rs  jpeg_frame.rs  mod.rs  ndpi.rs  ndpi_batch.rs  ndpi_core.rs  ndpi_retile.rs  ndpi_tiles.rs  reader.rs  stitched.rs  stripped_level.rs  synthetic.rs  tests.rs  tiled_ifd.rs
src/formats/zeiss/: attachments.rs  metadata.rs  slide.rs  tests.rs  tiles.rs
src/formats/zeiss_zvi/: compound.rs  header.rs  model.rs  mosaic.rs  slide.rs  tags.rs  tiles.rs
src/output/: cuda.rs  metal.rs
src/output/metal/: interop.rs  session.rs  tests.rs  tile.rs  ycbcr.metal  ycbcr.rs  ycbcr_perf.metal  ycbcr_probe.metal
statumen-openslide-shim/: Cargo.toml  README.md
statumen-openslide-shim/src/: handle.rs  install.rs  lib.rs  pixels.rs
statumen-openslide-shim/tests/: abi_contract.rs  install_contract.rs
supply-chain/: config.toml
tests/: ashlar_parity.rs  color_regression.rs  dicom_parity.rs  j2k_parity.rs  metal_edge_conformance.rs  metal_surface_smoke.rs  openslide_compare.rs  openslide_parity.rs  openslide_test_support.rs  phase3_prereq.rs  real_wsi_behavior.rs  repo_integrity.rs  signinum_parity.rs  support_unit.rs  zeiss_czi.rs  zeiss_zvi.rs
tests/fixtures/: parity_corpus.private.toml.example  parity_corpus.public.toml
tests/fixtures/jp2k/: README.md  generate.py  rgb_mct.j2k  rgb_mct.ppm  rgb_nomct.j2k  rgb_nomct.ppm  ycbcr_420.j2k  ycbcr_420.ppm  ycbcr_422.j2k  ycbcr_422.ppm  ycbcr_444.j2k  ycbcr_444.ppm
tests/repo_policy/: api_contract.rs  hygiene.rs  package_docs.rs  release_policy.rs  support.rs  unsafe_syntax.rs
tests/support/: compare.rs  corpus.rs  mod.rs  openslide_shim.rs  oracles.rs
wsi-rs-openslide-shim/: Cargo.toml  README.md
wsi-rs-openslide-shim/src/: handle.rs  install.rs  lib.rs  pixels.rs
wsi-rs-openslide-shim/tests/: abi_contract.rs  install_contract.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: checks.rs  coverage.rs  mod.rs  perf.rs  process.rs
xtask/src/commands/perf/: tests.rs
