[package]
name = "statumen"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Statumen whole-slide image reader"
repository = "https://github.com/frames-sg/statumen"
homepage = "https://github.com/frames-sg/statumen"
documentation = "https://docs.rs/statumen"
authors = ["Statumen contributors"]
keywords = ["whole-slide", "microscopy", "tiff", "pathology"]
categories = ["multimedia::images", "science"]
# MSRV policy: track the latest stable Rust release. Bumping `rust-version`
# is a minor-version bump for this crate.
rust-version = "1.94"
readme = "README.md"
exclude = [
    "fuzz/**",
    "scripts/**",
    ".github/**",
    "typos.toml",
]
# Disable cargo's auto-discovery of binaries from src/bin/*.rs so only
# intentionally listed command binaries are built.
autobins = false

[features]
default = []
# Enables OpenSlide compatibility-oracle parity tests via libloading.
# Off by default; CI matrix runs with and without.
parity-openslide = []
# Enables Metal-backed parity comparisons (signinum CPU vs Metal).
# Off by default; macOS only; CI matrix runs with and without.
parity-metal = []
# Enables Metal-backed device payload plumbing for Phase 5.
metal = ["dep:metal", "dep:signinum-jpeg-metal", "dep:signinum-j2k-metal"]
cuda = [
    "dep:signinum-jpeg-cuda",
    "dep:signinum-j2k-cuda",
    "signinum-jpeg-cuda/cuda-runtime",
    "signinum-j2k-cuda/cuda-runtime",
]

[dependencies]
image = { version = "0.25", default-features = false, features = ["bmp", "png", "pnm"] }
quick-xml = "0.36"
lru = "0.18"
thiserror = "2"
sha2 = "0.10"
byteorder = "1"
tracing = "0.1"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
flate2 = "1"
tempfile = "3"
zstd = "0.13"
signinum-jpeg = { path = "../signinum/crates/signinum-jpeg", version = "0.5.0" }
signinum-core = { path = "../signinum/crates/signinum-core", version = "0.5.0" }
signinum-tilecodec = { path = "../signinum/crates/signinum-tilecodec", version = "0.5.0" }
signinum-j2k = { path = "../signinum/crates/signinum-j2k", version = "0.5.0" }
signinum-jpeg-metal = { path = "../signinum/crates/signinum-jpeg-metal", version = "0.5.0", optional = true }
signinum-j2k-metal = { path = "../signinum/crates/signinum-j2k-metal", version = "0.5.0", optional = true }
signinum-jpeg-cuda = { path = "../signinum/crates/signinum-jpeg-cuda", version = "0.5.0", optional = true, default-features = false }
signinum-j2k-cuda = { path = "../signinum/crates/signinum-j2k-cuda", version = "0.5.0", optional = true, default-features = false }
metal = { version = "0.31", optional = true }
dicom-core = "0.9"
dicom-object = "0.9"
dicom-dictionary-std = "0.9"
dicom-parser = "0.9"
dicom-transfer-syntax-registry = { version = "0.9", default-features = false }
czi-rs = "0.1.0"
cfb = "0.14.0"

[dev-dependencies]
jpeg-decoder = "0.3.2"
jpeg-encoder = "0.6"
tempfile = { workspace = true }
toml = "0.8"
libloading = { workspace = true }
signinum-j2k-native = { path = "../signinum/crates/signinum-j2k-native", version = "0.5.0" }

[[bin]]
name = "svcache"
path = "src/bin/svcache.rs"

[workspace]
members = [".", "xtask", "statumen-openslide-shim"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/frames-sg/statumen"
homepage = "https://github.com/frames-sg/statumen"
documentation = "https://docs.rs/statumen"
authors = ["Statumen contributors"]

[workspace.dependencies]
libloading = "0.8"
tempfile = "3"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = "allow"

[lints]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = []
