[package]
name = "wsi-rs"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "wsi-rs whole-slide image reader"
repository = "https://github.com/frames-sg/wsi-rs"
homepage = "https://github.com/frames-sg/wsi-rs"
documentation = "https://docs.rs/wsi-rs"
authors = ["wsi-rs contributors"]
keywords = ["whole-slide", "microscopy", "tiff", "pathology"]
categories = ["multimedia::images", "science"]
# MSRV policy: track the latest stable Rust release. Bumping `rust-version`
# is a minor-version bump for this crate.
rust-version = "1.96"
readme = "README.md"
exclude = [
    "fuzz/**",
    "scripts/**",
    ".github/**",
    "typos.toml",
]
# Disable cargo's auto-discovery of binaries from src/bin/*.rs so only
# intentionally listed command binaries are built.
autobins = false

[features]
default = []
# Enables OpenSlide compatibility-oracle parity tests via libloading.
# Off by default; CI matrix runs with and without.
parity-openslide = []
# Enables Metal-backed parity comparisons (j2k CPU vs Metal).
# Off by default; macOS only; CI matrix runs with and without.
parity-metal = []
# Enables Metal-backed device payload plumbing for Phase 5.
metal = ["dep:metal", "dep:j2k-jpeg-metal", "dep:j2k-metal"]
cuda = [
    "dep:j2k-jpeg-cuda",
    "dep:j2k-cuda",
    "j2k-jpeg-cuda/cuda-runtime",
    "j2k-cuda/cuda-runtime",
]

[dependencies]
image = { version = "0.25", default-features = false, features = ["bmp", "png", "pnm"] }
quick-xml = "0.36"
lru = "0.18"
thiserror = "2"
sha2 = "0.10"
byteorder = "1"
tracing = "0.1"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
flate2 = "1"
tempfile = "3"
zstd = "0.13"
j2k-jpeg = "0.6.2"
j2k-core = "0.6.2"
j2k-tilecodec = "0.6.2"
j2k = "0.6.2"
j2k-jpeg-metal = { version = "0.6.2", optional = true }
j2k-metal = { version = "0.6.2", optional = true }
j2k-jpeg-cuda = { version = "0.6.2", optional = true, default-features = false }
j2k-cuda = { version = "0.6.2", optional = true, default-features = false }
metal = { version = "0.33", optional = true }
dicom-core = "0.9"
dicom-object = "0.9"
dicom-dictionary-std = "0.9"
dicom-parser = "0.9"
dicom-transfer-syntax-registry = { version = "0.9", default-features = false }
czi-rs = "0.1.0"
cfb = "0.14.0"

[dev-dependencies]
jpeg-decoder = "0.3.2"
jpeg-encoder = "0.6"
tempfile = { workspace = true }
toml = "0.8"
libloading = { workspace = true }
j2k-native = "0.6.2"

[[bin]]
name = "svcache"
path = "src/bin/svcache.rs"

[workspace]
members = [".", "xtask", "wsi-rs-openslide-shim"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/frames-sg/wsi-rs"
homepage = "https://github.com/frames-sg/wsi-rs"
documentation = "https://docs.rs/wsi-rs"
authors = ["wsi-rs contributors"]

[workspace.dependencies]
libloading = "0.8"
tempfile = "3"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = "allow"

[lints]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = []
