[package]
name = "wsi-rs-openslide-shim"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "OpenSlide-compatible C ABI shim backed by wsi-rs"
publish = false

[lib]
name = "wsi_rs_openslide_shim"
crate-type = ["cdylib", "rlib"]

[dependencies]
libloading = { workspace = true }
wsi-rs = { path = ".." }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
undocumented_unsafe_blocks = "warn"
